# isometric-sdl-demo

./: .gitignore  CMakeLists.txt  README.md  RoversRevengeTests_include-b12d07c.cmake  main.cpp  pre-commit.sh  rebuild.sh  render_desert_tile_0.sh  render_rock_tile_0.sh  render_tile.sh  render_water_tile_0.sh  render_water_tile_1.sh  render_water_tile_2.sh  setup-hooks.sh
assets/: boat_iso.blend  boat_iso.blend1  lion-cat-idle-1.vox  tile0.afdesign
assets/Rendered spritesheets/: boat_iso.ssdata  tank.ssdata  tank_idle.ssdata  tank_idle_rot000.ssdata  tank_idle_rot045.ssdata  tank_idle_rot090.ssdata  tank_idle_rot135.ssdata  tank_idle_rot180.ssdata  tank_idle_rot225.ssdata  tank_idle_rot270.ssdata  tank_idle_rot315.ssdata  tank_rot000.ssdata  tank_rot045.ssdata  tank_rot090.ssdata  tank_rot135.ssdata  tank_rot180.ssdata  tank_rot225.ssdata  tank_rot270.ssdata  tank_rot315.ssdata
blender-projects/: isometric_template.blend
cmake/: FindLevelDB.cmake  FindRocksDB.cmake
git-hooks/: pre-commit
lib/PerlinNoise/: CMakeLists.txt  PerlinNoise.hpp  example.cpp
lib/SDL_FontCache/: CMakeCache.txt  CMakeLists.txt  Makefile  Modification  SDL_FontCache.c  SDL_FontCache.h  cmake_install.cmake
lib/SDL_FontCache/cmake/: FindSDL2.cmake
src/: main.cpp
src/config/: configuration.cpp  configuration.hpp
src/debug/: debug-draw-utils.cpp  debug-draw-utils.hpp  debug-overlay.cpp  debug-overlay.hpp
src/input/: direction-input-helpers.cpp  direction-input-helpers.hpp
src/map/: camera-target.hpp  camera.cpp  camera.hpp  coordinate-mapper.cpp  coordinate-mapper.hpp  intersect-target.hpp  isometric-tile-map-sector.cpp  isometric-tile-map-sector.hpp  map-sector-database-hashmap-impl.cpp  map-sector-database-hashmap-impl.hpp  map-sector-database.hpp  screen-coordinate-mapper.cpp  screen-coordinate-mapper.hpp  sector-index-hash-map.cpp  sector-index-hash-map.hpp  sector-index.hpp  sector-spatial-utils.cpp  sector-spatial-utils.hpp  world-to-map-sector-index.cpp  world-to-map-sector-index.hpp  world.cpp  world.hpp
src/map-generator/: deterministic-prng.cpp  deterministic-prng.hpp
src/player/: game-object.hpp  player.cpp  player.hpp
src/render/: sdl-manager.cpp  sdl-manager.hpp
src/sprites/: sprite-metadata.hpp  sprite-registry.cpp  sprite-registry.hpp  sprite-selector.cpp  sprite-selector.hpp  sprite-state.hpp  sprite.cpp  sprite.hpp
src/spritesheets/: spritesheet.cpp  spritesheet.hpp
src/state/: game-save-state.cpp  game-save-state.hpp
src/test/: test.cpp
src/test/pair-operators/: add-pair.cpp  divide-pair-by.cpp  multiply-pair-by.cpp
src/test/screen-coordinate-mapper/: center-in-screen-space.cpp
src/test/sector-spatial-utils/: from-integer-pair-to-key.cpp  from-key-to-integer-pair.cpp  get-neighbours.cpp
src/test/world-to-map-sector-index/: get-map-index.cpp
src/text/: cached-text-renderer.cpp  cached-text-renderer.hpp  text-renderer.cpp  text-renderer.hpp
src/textures/: texture-wrapper-factory.cpp  texture-wrapper-factory.hpp  texture-wrapper.cpp  texture-wrapper.hpp
src/util/: pair-operators.cpp  pair-operators.hpp
